@@ -1,5 +1,7 @@
 2010-09-25  Julien Danjou  <julien@danjou.info>
 
+	* gnus.el: Remove useless gnus-local-domain.
+
 	* gnus-gravatar.el (gnus-gravatar-transform-address): Use
 	gnus-gravatar-size.
 
